@@ -65,6 +65,15 @@ else:
 # deprecated
 _TextTestResult = TextTestResult
 
+# There are no tests here, so don't try to run anything discovered from
+# introspecting the symbols (e.g. FunctionTestCase). Instead, all our
+# tests come from within unittest.test.
+def load_tests(loader, tests, pattern):
+    import os.path
+    # top level directory cached on loader instance
+    this_dir = os.path.dirname(__file__)
+    return loader.discover(start_dir=this_dir, pattern=pattern)
+
 __unittest = True
 
 def load_tests(loader, tests, pattern):
